--- a/www/index.html
+++ b/www/index.html
@@ -16,8 +16,8 @@
     </header>
     <section id="mainContent">
       <label for="urlText"></label>
-      <input type="text" name="urlText" id="urlText">
-      <button id="submit">Scrape</button>
+      <input type="text" name="urlText" id="urlText" placeholder="http://wwww.somesite.com">
+      <button id="submit">Scrape Page</button>
       <div id="ajax-loader-container">
         <img src="images/ajax-loader.gif" alt="">
       </div>
