add node logo, clean up page

--- a/www/index.html
+++ b/www/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
   <article>
+    <img class="logo" src="images/node-js-logo.png" alt="node.js logo">
     <header>
       <h1>Web Page Scraping with Node.js and Cheerio</h1>
       <h2>Enter a URL below and then click "Scrape"</h2>
@@ -24,7 +25,7 @@
       <div id="data-container"></div>
     </section>
     <footer>
-    &copy; Copyright 2017 | Kevin Chisholm
+    &copy; Copyright 2017 | <a href="http://blog.kevinchisholm.com/" target="_blank">Kevin Chisholm</a>
     </footer>
   </article>
 
